--- a/.env
+++ b/.env
@@ -1,3 +1,4 @@
+ALLOW_ORIGINS = https://www.marketsfin.lol,https://pyworkclient.vercel.app,http://localhost:8081
 PORT=8080
 CORS_ORIGINS=http://localhost:8081,https://www.tradeflow.lol
 INGEST_KEY=UvV0wIxI6TOkQ03ET6nArCmji3P7NsQdla+5jPEpch4=
